--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -2,111 +2,97 @@
   "MainPage": {
     "HeroTitle": "Спільними зусиллями",
     "HeroTitle1": "відбудуємо країну",
-    "HeroSubTitle":"Благодійний фонд «Перемоги та Відновлення»",
-    "HeroProjectsText":"поточних",
-    "HeroProjectsText1":"проектів",
-
+    "HeroSubTitle": "Благодійний фонд «Перемоги та Відновлення»",
+    "HeroProjectsText": "поточних",
+    "HeroProjectsText1": "проектів",
     "WorkingProcessSubTitleMob": "Додаткові деталі розробки обговорюються індивідуально",
     "WorkingProcessSubTitleLaptop": "Додаткові деталі розробки обговорюються в індивідуальному порядку",
-    
     "AboutSectionTitle": "Про Фонд*",
-    "AboutSectionTitleText":"Благодійний Фонд",
-    "AboutSectionTitleText1":"«Перемоги та Відновлення»",
+    "AboutSectionTitleText": "Благодійний Фонд",
+    "AboutSectionTitleText1": "«Перемоги та Відновлення»",
     "AboutSectionText": " – це неприбуткова організація, мета та ціль котрої полягає у відновленні України та міці її державності. У сприянні перемозі українського народу та ефективному, якісному й надважливому забезпеченні комфортних умов для всіх та кожного зокрема.",
-    "AboutSectionText1":"Основний напрямок",
-    "AboutSectionText2":"діяльності благодійної організації - це, перш за все, психосоціальна підтримка та культурно-просвітницька діяльність для всіх, хто відчуває в цьому потребу й зацікавленість.",
-
+    "AboutSectionText1": "Основний напрямок",
+    "AboutSectionText2": "діяльності благодійної організації - це, перш за все, психосоціальна підтримка та культурно-просвітницька діяльність для всіх, хто відчуває в цьому потребу й зацікавленість.",
     "ProjectsSectionTitle": "Проєкти",
     "NewsSectionTitle": "Новини"
   },
-  
   "MissionPage": {
     "Title": "Місія та статут",
     "SubTitle": "Фонд",
-    "SubTitle1":"«Перемоги та Відновлення»",
-    "SubTitle2":" – це про майбутнє. Щасливе, комфортне та справедливе.",
-    "Text1":"Благодійний Фонд",
-    "Text2":"«Перемоги та Відновлення»",
-    "Text3":" — це динамічна неприбуткова організація, яка прагне відновити Україну та зміцнити її державність.",
-    "Text4":"Ми допомагаємо українському народу",
-    "Text5":" досягти перемоги та створюємо комфортні умови для всіх. Наша головна діяльність зосереджена на психосоціальній підтримці та культурно-просвітницькій роботі, відкритій для всіх, хто відчуває в цьому потребу.",
-    "Text6":"Ми працюємо з людьми",
-    "Text7":", постраждалими від воєнних дій, та тими, хто потребує соціальної адаптації, приділяючи особливу увагу студентам і молоді, адже вважаємо психологічну підтримку надважливою для майбутнього країни.",
-    "Text8":"Наші проєкти ",
-    "Text9":"охоплюють наукові та освітні заходи",
-    "Text10":", популяризацію здоров’я, саморозвитку та самореалізації через соціальні мережі та публічні виступи. Фонд створює платформи для нетворкінгу, активно інвестує у перемогу країни, організовуючи збори, пожертви та волонтерство, щоб допомогти державі у всіх необхідних напрямках."
+    "SubTitle1": "«Перемоги та Відновлення»",
+    "SubTitle2": " – це про майбутнє. Щасливе, комфортне та справедливе.",
+    "Text1": "Благодійний Фонд",
+    "Text2": "«Перемоги та Відновлення»",
+    "Text3": " — це динамічна неприбуткова організація, яка прагне відновити Україну та зміцнити її державність.",
+    "Text4": "Ми допомагаємо українському народу",
+    "Text5": " досягти перемоги та створюємо комфортні умови для всіх. Наша головна діяльність зосереджена на психосоціальній підтримці та культурно-просвітницькій роботі, відкритій для всіх, хто відчуває в цьому потребу.",
+    "Text6": "Ми працюємо з людьми",
+    "Text7": ", постраждалими від воєнних дій, та тими, хто потребує соціальної адаптації, приділяючи особливу увагу студентам і молоді, адже вважаємо психологічну підтримку надважливою для майбутнього країни.",
+    "Text8": "Наші проєкти ",
+    "Text9": "охоплюють наукові та освітні заходи",
+    "Text10": ", популяризацію здоров’я, саморозвитку та самореалізації через соціальні мережі та публічні виступи. Фонд створює платформи для нетворкінгу, активно інвестує у перемогу країни, організовуючи збори, пожертви та волонтерство, щоб допомогти державі у всіх необхідних напрямках."
   },
-
   "TeamPage": {
     "Title": "Команда"
   },
-
   "ProjectsPage": {
     "Title": "Проєкти"
   },
-
   "ProjectsIdPage": {
     "DateOfStart": "Початок проекту: ",
-    "Target":"Ціль збору",
-    "Currency":" грн",
-    "AboutProject":"Про проєкт",
-    "Mission":"МІСІЯ:",
-    "TargetOfProject":"МЕТА:",
-    "TargetAudience":"ЦІЛЬОВА АУДИТОРІЯ:",
-    "Concept":"КОНЦЕПТ:",
-    "OtherProjects":"Інші проєкти"
+    "Target": "Ціль збору",
+    "Currency": " грн",
+    "AboutProject": "Про проєкт",
+    "Mission": "МІСІЯ:",
+    "TargetOfProject": "МЕТА:",
+    "TargetAudience": "ЦІЛЬОВА АУДИТОРІЯ:",
+    "Concept": "КОНЦЕПТ:",
+    "OtherProjects": "Інші проєкти"
   },
-
   "ContactsPage": {
     "Title": "Контакти",
-    "PrivacyPolicy":"Перед здійсненням дзвінка або зверненням на електронну адресу, будь ласка, ознайомтесь з політикою конфіденційності! Наш договір публічної оферти та політика конфіденційності знаходяться за посиланням:",
+    "PrivacyPolicy": "Перед здійсненням дзвінка або зверненням на електронну адресу, будь ласка, ознайомтесь з політикою конфіденційності! Наш договір публічної оферти та політика конфіденційності знаходяться за посиланням:",
     "Text": "` Для зв'язку з нами зателефонуйте за телефоном, або напишіть нам на електронну адресу, і ми зв'яжемось з вами якнайшвидше!`"
   },
-
-  "NewsPage":{
-    "Title":"Новини",
-    "Details":"Детальніше"
+  "NewsPage": {
+    "Title": "Новини",
+    "Details": "Детальніше"
   },
-
-  "PartnersPage":{
-    "Title":"Партнерство",
-    "SubTitle":"Стати партнером",
-    "Details":"Детальніше"
+  "PartnersPage": {
+    "Title": "Партнерство",
+    "SubTitle": "Стати партнером",
+    "Details": "Детальніше"
   },
-
   "NotFoundPage": {
     "NotFoundTitle": "Сторінка не знайдена",
     "NotFoundTitleBtn": "На головну"
   },
-
-  "Footer":{
-    "Contacts":"Контакти",
-    "AdressCity":"м.Київ",
-    "AdressStreet":"вул. Княжий Затон",
-    "WorkDays":"Пн-Пт",
-    "MenuNav":"Меню"
+  "Footer": {
+    "Contacts": "Контакти",
+    "AdressCity": "м.Київ",
+    "AdressStreet": "вул. Княжий Затон",
+    "WorkDays": "Пн-Пт",
+    "MenuNav": "Меню"
   },
-
   "Buttons": {
     "Donate": "Підтримати",
     "Details": "Детальніше",
     "ContactUs": "Зв’яжись з нами",
-    "ToPartners":"Стати партнером",
-    "ToStatute":"Ознайомитись зі Статутом",
-    "SendRequest":"Надіслати заявку"
+    "ToPartners": "Стати партнером",
+    "ToContacts": "Стати волонтером",
+    "ToStatute": "Ознайомитись зі Статутом",
+    "SendRequest": "Надіслати заявку"
   },
-
   "Form": {
     "Name": "Ім’я",
     "Phone": "Номер телефону",
-    "PhoneOrganization":"Номер телефона організації",
-    "Email":"Адреса електронної пошти",
-    "Adress":"Адреса організації",
-    "Role":"Ваша роль в організації",
-    "Subject":"Тема",
+    "PhoneOrganization": "Номер телефона організації",
+    "Email": "Адреса електронної пошти",
+    "Adress": "Адреса організації",
+    "Role": "Ваша роль в організації",
+    "Subject": "Тема",
     "TextArea": "Коротко опишіть Ваше побажання",
-    "FormText":"Оберіть мессенджер для зв’язку",
-
+    "FormText": "Оберіть мессенджер для зв’язку",
     "FormSubmitedMsg": "Вітаємо! Ваше повідомлення відправлено менеджеру.",
     "FieldRequiredMsg": "Заповніть це поле",
     "errorShortName": "Ім’я має бути довшим",
@@ -116,7 +102,6 @@
     "errorNumberOfObject3": "Тільки цифри",
     "errorTooManySpases": "Забагато пробілів"
   },
-
   "formErrors": {
     "name": "Невірно введене ім’я",
     "phone": "Номер телефону",
