--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -4,13 +4,11 @@
     "HeroTitle1": "відбудуємо країну",
     "HeroSubTitle": "Благодійний фонд «Перемоги та Відновлення»",
     "HeroProjectsText": "поточних",
-    "HeroProjectsText1": "проектів",
-    "WorkingProcessSubTitleMob": "Додаткові деталі розробки обговорюються індивідуально",
-    "WorkingProcessSubTitleLaptop": "Додаткові деталі розробки обговорюються в індивідуальному порядку",
+    "HeroProjectsText1": "проєктів",
     "AboutSectionTitle": "Про Фонд*",
     "AboutSectionTitleText": "Благодійний Фонд",
     "AboutSectionTitleText1": "«Перемоги та Відновлення»",
-    "AboutSectionText": " – це неприбуткова організація, мета та ціль котрої полягає у відновленні України та міці її державності. У сприянні перемозі українського народу та ефективному, якісному й надважливому забезпеченні комфортних умов для всіх та кожного зокрема.",
+    "AboutSectionText": " – це неприбуткова організація, мета та ціль котрої полягає у відновленні України та міці її державності, у сприянні перемозі українського народу та ефективному, якісному й надважливому забезпеченні комфортних умов для всіх та кожного зокрема.",
     "AboutSectionText1": "Основний напрямок",
     "AboutSectionText2": "діяльності благодійної організації - це, перш за все, психосоціальна підтримка та культурно-просвітницька діяльність для всіх, хто відчуває в цьому потребу й зацікавленість.",
     "ProjectsSectionTitle": "Проєкти",
@@ -39,7 +37,7 @@
     "Title": "Проєкти"
   },
   "ProjectsIdPage": {
-    "DateOfStart": "Початок проекту: ",
+    "DateOfStart": "Початок проєкту: ",
     "Target": "Ціль збору",
     "Currency": " грн",
     "AboutProject": "Про проєкт",
@@ -52,7 +50,7 @@
   "ContactsPage": {
     "Title": "Контакти",
     "PrivacyPolicy": "Перед здійсненням дзвінка або зверненням на електронну адресу, будь ласка, ознайомтесь з політикою конфіденційності! Наш договір публічної оферти та політика конфіденційності знаходяться за посиланням:",
-    "Text": "` Для зв'язку з нами зателефонуйте за телефоном, або напишіть нам на електронну адресу, і ми зв'яжемось з вами якнайшвидше!`"
+    "Text": "Для зв'язку з нами зателефонуйте за телефоном, або напишіть нам на електронну адресу, і ми зв'яжемось з вами якнайшвидше!"
   },
   "NewsPage": {
     "Title": "Новини",
@@ -86,28 +84,20 @@
   "Form": {
     "Name": "Ім’я",
     "Phone": "Номер телефону",
-    "PhoneOrganization": "Номер телефона організації",
     "Email": "Адреса електронної пошти",
-    "Adress": "Адреса організації",
+    "PhoneOrganization": "Номер телефону організації",
+    "Address": "Адреса організації",
     "Role": "Ваша роль в організації",
     "Subject": "Тема",
     "TextArea": "Коротко опишіть Ваше побажання",
-    "FormText": "Оберіть мессенджер для зв’язку",
-    "FormSubmitedMsg": "Вітаємо! Ваше повідомлення відправлено менеджеру.",
-    "FieldRequiredMsg": "Заповніть це поле",
-    "errorShortName": "Ім’я має бути довшим",
-    "errorLongName": "Ім’я має бути коротшим",
-    "errorNumberOfObject": "Такого номеру немає",
-    "errorNumberOfObject2": "Тільки додатні числа",
-    "errorNumberOfObject3": "Тільки цифри",
-    "errorTooManySpases": "Забагато пробілів"
+    "FormText": "Оберіть месенджер для зв’язку",
+    "FormSubmitedMsg": "Вітаємо! Ваше повідомлення відправлено менеджеру."
   },
   "formErrors": {
-    "name": "Невірно введене ім’я",
-    "phone": "Номер телефону",
-    "dateOfEntry": "Оберіть дату",
-    "departureDate": "Оберіть дату",
-    "numberObject": "Вкажіть номер об’єкту"
+    "requiredField": "Заповніть це поле",
+    "shortName": "Ім’я має бути довшим",
+    "notValidEmail": "Не валідний email",
+    "chooseCallbackMessenger": "Виберіть месенджер"
   },
   "LoadStatus": {
     "Load": "Завантаження..."
