changed address & publicOffer

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -68,7 +68,7 @@
   "Footer": {
     "Contacts": "Contacts",
     "AdressCity": "Kyiv",
-    "AdressStreet": "Knyazhyi Zaton street",
+    "AdressStreet": "Nauky Ave.",
     "WorkDays": "Mon-Fri",
     "MenuNav": "Menu"
   },
