--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -68,7 +68,7 @@
   "Footer": {
     "Contacts": "Контакти",
     "AdressCity": "м.Київ",
-    "AdressStreet": "вул. Княжий Затон",
+    "AdressStreet": "просп. Науки",
     "WorkDays": "Пн-Пт",
     "MenuNav": "Меню"
   },
