new styles, upd navigation, new page: coalition and forums

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -52,6 +52,62 @@
     "PrivacyPolicy": "Please read the privacy policy before calling or sending emails! Our public offer agreement and privacy policy are available here:",
     "Text": "To contact us, please call us by phone or send us an email and we will get back to you as soon as possible!"
   },
+  "CoalitionPage": {
+    "Title": "Coalition",
+    "SubTitle": "Coalition",
+    "SubTitle1": "Veteran and Volunteer Forces",
+    "SubTitle2": "What does",
+    "SubTitle3": "the Coalition?",
+    "Text1": "The Coalition ",
+    "Text2": "of Veteran and Volunteer Forces ",
+    "Text3": "is an association created for ",
+    "Text4": "the protection of veterans' rights",
+    "Text5": ", their ",
+    "Text6": "rehabilitation",
+    "Text7": ", social",
+    "Text8": ", adaptation ",
+    "Text9": "and support of veteran businesses.",
+    "Text10": "We work to ensure that ",
+    "Text11": "the voices of defenders ",
+    "Text12": "are heard, and ",
+    "Text13": "systematic changes",
+    "Text14": " occur here and now.",
+    "Text15": "Together we build",
+    "Text16": " the future",
+    "Text17": ", in which veterans have worthy opportunities for ",
+    "Text18": "development and life!",
+    "Table": "Protection of veterans' and volunteers' rights.",
+    "Table1": "Cooperation with government bodies and international partners.",
+    "Table2": "Support for veteran entrepreneurship and employment.",
+    "Table3": "Rehabilitation and educational programs for veterans."
+  },
+  "ForumsPage": {
+    "Title": "Unity Forums",
+    "SubTitle": "Unity Forums of Veteran and Volunteer Forces",
+    "SubTitle1": "What's happening on ",
+    "SubTitle2": "the forums?",
+  "SubTitle3": "Past ",
+  "SubTitle4": "forums",
+    "Text1": "Forums ",
+    "Text2": "of Unity of Veteran and Volunteer Forces ",
+    "Text3": "– are large-scale events that bring together veterans, volunteers, representatives of government, business, and public organizations for ",
+    "Text4": "joint problem-solving",
+    "Text5": ", which help Ukraine's defenders adapt to civilian life.",
+    "Text6": "The greatest achievement – the creation of",
+    "Text7": " the Coalition of Veteran and Volunteer Forces.",
+    "Text8": "Kyiv, Zhytomyr, Mukachevo...",
+    "Text9": "Next will be in",
+    "Text10": " Ternopil",
+    "Text11": "Check the current forum schedule and register for the event on our social media.",
+    "Text12": "Unity Forum – ",
+    "Text13": "is a space for real change.",
+    "Text14": "Join the initiative and help create new opportunities for those who defended Ukraine.",
+    "Table": "Networking – a platform for communication and exchanging experiences among veterans, volunteers, and partners.",
+    "Table1": "Discussions with experts and government representatives – answers to important questions regarding social protection, employment, rehabilitation, and education.",
+    "Table2": "Support for veteran entrepreneurship – presentation of grant programs, introductions to investors, and opportunities for developing one's own business.",
+    "Table3": "Practical training and masterclasses ranging from psychological support to business planning.",
+    "Table4": "Job fairs – an opportunity to find a job or learn about career prospects."
+  },
   "NewsPage": {
     "Title": "News",
     "Details": "Details"
@@ -79,7 +135,8 @@
     "ToPartners": "Become a partner",
     "ToContacts": "Become a volunteer",
     "ToStatute": "Read the Statute",
-    "SendRequest": "Send a request"
+    "SendRequest": "Send a request",
+    "ToCoalition": "Join the Coalition"
   },
   "Form": {
     "Name": "Name",
