--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -52,6 +52,64 @@
     "PrivacyPolicy": "Please read the privacy policy before calling or sending emails! Our public offer agreement and privacy policy are available here:",
     "Text": "To contact us, please call us by phone or send us an email and we will get back to you as soon as possible!"
   },
+  "CoalitionPage": {
+    "Title": "Coalition",
+    "SubTitle": "Coalition",
+    "SubTitle1": "Veteran and Volunteer Forces",
+    "SubTitle2": "What does",
+    "SubTitle3": "the Coalition?",
+    "Text1": "The Coalition ",
+    "Text2": "of Veteran and Volunteer Forces ",
+    "Text3": "is an association created for ",
+    "Text4": "the protection of veterans' rights",
+    "Text5": ", their ",
+    "Text6": "rehabilitation",
+    "Text7": ", social",
+    "Text8": ", adaptation ",
+    "Text9": "and support of veteran businesses.",
+    "Text10": "We work to ensure that ",
+    "Text11": "the voices of defenders ",
+    "Text12": "are heard, and ",
+    "Text13": "systematic changes",
+    "Text14": " occur here and now.",
+    "Text15": "Together we build",
+    "Text16": " the future",
+    "Text17": ", in which veterans have worthy opportunities for ",
+    "Text18": "development and life!",
+    "Table": "Protection of veterans' and volunteers' rights.",
+    "Table1": "Cooperation with government bodies and international partners.",
+    "Table2": "Support for veteran entrepreneurship and employment.",
+    "Table3": "Rehabilitation and educational programs for veterans."
+  },
+  "ForumsPage": {
+    "Title": "Coalition",
+    "SubTitle": "Coalition",
+    "SubTitle1": "Veteran and Volunteer Forces",
+    "SubTitle2": "What does",
+    "SubTitle3": "the Coalition?",
+    "Text1": "The Coalition ",
+    "Text2": "of Veteran and Volunteer Forces ",
+    "Text3": "is an association created for ",
+    "Text4": "the protection of veterans' rights",
+    "Text5": ", their ",
+    "Text6": "rehabilitation",
+    "Text7": ", social",
+    "Text8": ", adaptation ",
+    "Text9": "and support of veteran businesses.",
+    "Text10": "We work to ensure that ",
+    "Text11": "the voices of defenders ",
+    "Text12": "are heard, and ",
+    "Text13": "systematic changes",
+    "Text14": " occur here and now.",
+    "Text15": "Together we build",
+    "Text16": " the future",
+    "Text17": ", in which veterans have worthy opportunities for ",
+    "Text18": "development and life!",
+    "Table": "Protection of veterans' and volunteers' rights.",
+    "Table1": "Cooperation with government bodies and international partners.",
+    "Table2": "Support for veteran entrepreneurship and employment.",
+    "Table3": "Rehabilitation and educational programs for veterans."
+  },
   "NewsPage": {
     "Title": "News",
     "Details": "Details"
@@ -79,7 +137,8 @@
     "ToPartners": "Become a partner",
     "ToContacts": "Become a volunteer",
     "ToStatute": "Read the Statute",
-    "SendRequest": "Send a request"
+    "SendRequest": "Send a request",
+    "ToCoalition": "Join the Coalition"
   },
   "Form": {
     "Name": "Name",
