--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -30,6 +30,62 @@
     "Text9": "охоплюють наукові та освітні заходи",
     "Text10": ", популяризацію здоров’я, саморозвитку та самореалізації через соціальні мережі та публічні виступи. Фонд створює платформи для нетворкінгу, активно інвестує у перемогу країни, організовуючи збори, пожертви та волонтерство, щоб допомогти державі у всіх необхідних напрямках."
   },
+  "CoalitionPage": {
+    "Title": "Коаліція",
+    "SubTitle": "Коаліція",
+    "SubTitle1": "Ветеранських та Волонтерських Сил",
+    "SubTitle2": "Що дає",
+    "SubTitle3": "Коаліція?",
+    "Text1": "Коаліція ",
+    "Text2": "Ветеранських та Волонтерських Сил ",
+    "Text3": "– це об’єднання, створене для ",
+    "Text4": "захисту прав ветеранів",
+    "Text5": ", їхньої ",
+    "Text6": " реабілітації",
+    "Text7": ", соціальної",
+    "Text8": ", адаптації ",
+    "Text9": "та підтримки ветеранського бізнесу.",
+    "Text10": "Ми працюємо над тим, щоб",
+    "Text11": " голоси захисників ",
+    "Text12": "були почуті, а ",
+    "Text13": "системні зміни",
+    "Text14": " відбувалися тут і зараз.",
+    "Text15": "Разом ми будуємо",
+    "Text16": " майбутнє",
+    "Text17": " , у якому ветерани мають гідні можливості для ",
+    "Text18": "розвитку та життя!",
+    "Table": "Захист прав ветеранів та волонтерів.",
+    "Table1": "Співпрацю з державними структурами та міжнародними партнерами.",
+    "Table2": "Підтримку ветеранського підприємництва та працевлаштування.",
+    "Table3": "Реабілітаційні та освітні програми для ветеранів."
+  }, 
+  "ForumsPage": {
+    "Title": "Форуми Єднання",
+    "SubTitle": "Форуми Єднання Ветеранських та Волонтерських Сил",
+    "SubTitle1": "Що відбувається на ",
+    "SubTitle2": "форумах?",
+    "SubTitle3": "Де вже відбулися ",
+    "SubTitle4": "форуми?",
+    "Text1": "Форуми ",
+    "Text2": "Єднання Ветеранських та Волонтерських Сил ",
+    "Text3": "– це масштабні події, які об’єднують ветеранів, волонтерів, представників державної влади, бізнесу та громадських організацій для ",
+    "Text4": "спільного пошуку рішень",
+    "Text5": ", що допоможуть захисникам України адаптуватися до мирного життя.",
+    "Text6": "Найбільше досягнення – створення",
+    "Text7": " Коаліції ветеранських та волонтерських сил.",
+    "Text8": "Київ, Житомир, Мукачево...",
+    "Text9": "Далі буде у",
+    "Text10": " Тернополі",
+    "Text11": "Актуальний розклад форумів та реєстрацію на подію дивіться у наших соцмережах.",
+    "Text12": "Форум Єднання – ",
+    "Text13": "це простір для реальних змін.",
+    "Text14": "Долучайтеся до ініціативи та допоможіть створювати нові можливості для тих, хто захищав Україну.",
+    "Table": "Мережування – платформа для спілкування та обміну досвідом між ветеранами, волонтерами та партнерами.",
+    "Table1": "Дискусії з експертами та представниками держави – відповіді на важливі птання щодо соціального захисту, працевлаштування, реабілітації та освіти.",
+    "Table2": "Підтримка ветеранського бізнесу – презентація грантових програм, знайомство з інвесторами та можливості розвитку власної справи.",
+    "Table3": "Практичні тренінги та майстер-класи від психологічної підтримки до бізнес-планування.",
+    "Table4": "Ярмарки вакансій – можливість знайти роботу або дізнатися про кар’єрні перспективи."
+  },
   "TeamPage": {
     "Title": "Команда"
   },
@@ -79,7 +135,8 @@
     "ToPartners": "Стати партнером",
     "ToContacts": "Стати волонтером",
     "ToStatute": "Ознайомитись зі Статутом",
-    "SendRequest": "Надіслати заявку"
+    "SendRequest": "Надіслати заявку",
+    "ToCoalition": "Долучитися до Коаліції"
   },
   "Form": {
     "Name": "Ім’я",
